--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/icon.png" type="image/png">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite</title>
+  <meta charset="UTF-8">
+  <link rel="icon" type="image/png" href="/icon.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Authn</title>
 </head>
 
 <body>
+  <main>
+    <p>Authn Test</p>
+    <button id="auth-create">Create</button>
+    <button id="auth-get">Get</button>
+    <p>Result: </p>
+    <section id="result"></section>
+  </main>
+
   <script type="module" src="/main.js"></script>
 </body>
 
